--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "graphql": "^16.5.0",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "18.2.0",
+    "react-inlinesvg": "^3.0.0",
     "sass": "^1.53.0"
   },
   "devDependencies": {
