--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.6.9",
     "graphql": "^16.5.0",
     "next": "12.2.2",
+    "nextjs-google-analytics": "^2.0.0",
     "react": "18.2.0",
     "react-clipboard.js": "^2.0.16",
     "react-dom": "18.2.0",
