--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@antv/g6": "^4.7.0",
     "@apollo/client": "^3.6.9",
     "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
     "next": "12.2.2",
     "nextjs-google-analytics": "^2.0.0",
     "react": "18.2.0",
