--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@antv/g6": "^4.7.0",
+    "@antv/g6-react-node": "^1.4.5",
     "@apollo/client": "^3.6.9",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
