--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-clipboard.js": "^2.0.16",
     "react-dom": "18.2.0",
     "react-inlinesvg": "^3.0.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
