--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-inlinesvg": "^3.0.0",
     "sass": "^1.53.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "urlcat": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
