--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@antv/g6": "^4.7.0",
     "@antv/g6-react-node": "^1.4.5",
     "@apollo/client": "^3.6.9",
+    "@ensdomains/ensjs": "^3.0.0-alpha.34",
     "alchemy-sdk": "^2.2.1",
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
+    "ethers": "^5.7.2",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
     "next": "^13.0.1",
