--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-clipboard.js": "^2.0.16",
     "react-dom": "18.2.0",
     "react-inlinesvg": "^3.0.0",
+    "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
     "sass": "^1.53.0",
     "swr": "^1.3.0",
