--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "wallet.ts": "^1.0.1"
+  },
   "devDependencies": {
-    "@types/node": "^18.7.14",
-    "@types/react": "^18.0.18",
-    "eslint": "8.19.0",
-    "eslint-config-next": "13.0.1",
-    "typescript": "^4.8.2",
     "@ant-design/icons": "^4.7.0",
     "@antv/g6": "^4.7.0",
     "@antv/g6-react-node": "^1.4.5",
     "@apollo/client": "^3.6.9",
     "@ensdomains/ensjs": "^3.0.0-alpha.37",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
     "alchemy-sdk": "^2.2.1",
     "bignumber.js": "^9.1.0",
     "bn.js": "^5.2.1",
     "date-fns": "^2.29.3",
+    "eslint": "8.19.0",
+    "eslint-config-next": "13.0.1",
     "ethers": "^5.7.2",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.53.0",
     "swr": "^1.3.0",
+    "typescript": "^4.8.2",
     "urlcat": "^2.0.4"
   }
 }
