--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
     "wallet.ts": "^1.0.1"
   },
   "devDependencies": {
@@ -17,7 +18,7 @@
     "@antv/g6": "^4.7.0",
     "@antv/g6-react-node": "^1.4.5",
     "@apollo/client": "^3.6.9",
-    "@ensdomains/ensjs": "^3.0.0-alpha.37",
+    "@ensdomains/ensjs": "^3.0.0-alpha.50",
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "alchemy-sdk": "^2.2.1",
