--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.10.0",
+    "api": "^5.0.7",
     "wallet.ts": "^1.0.1"
   },
   "devDependencies": {
