--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.10.0",
+    "next-seo": "^6.0.0",
     "underscore": "^1.13.6",
     "wallet.ts": "^1.0.1"
   },
