feat: qrcode && optimise

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boring-avatars": "^1.7.0",
     "dotbit": "^0.4.17",
     "next-seo": "^6.0.0",
+    "qrcode": "^1.5.3",
     "underscore": "^1.13.6",
     "wallet.ts": "^1.0.1"
   },
