--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qrcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-qrcode-logo": "^2.9.0",
     "underscore": "^1.13.6",
     "wallet.ts": "^1.0.1"
   },
@@ -30,7 +31,7 @@
     "ethers": "^6.5.1",
     "graphql": "^15.8.0",
     "lodash": "^4.17.21",
-    "next": "^13.4.6",
+    "next": "^13.4.19",
     "nextjs-google-analytics": "^2.0.0",
     "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
