--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "boring-avatars": "^1.7.0",
     "qrcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-qrcode-logo": "^2.9.0",
+    "redux-localstorage-simple": "^2.5.1",
     "underscore": "^1.13.6",
     "wallet.ts": "^1.0.1"
   },
