--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "boring-avatars": "^1.7.0",
+    "geist": "^1.0.0",
     "qrcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
