--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-markdown": "^9.0.0",
     "react-qrcode-logo": "^2.9.0",
     "underscore": "^1.13.6",
     "wallet.ts": "^1.0.1"
