--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
+    "react-markdown": "^9.0.0",
     "react-qrcode-logo": "^2.9.0"
   },
   "devDependencies": {
