--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "geist": "^1.0.0",
     "next": "^14.0.4",
-    "qrcode": "^1.5.3",
-    "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^4.1.1",
-    "react-markdown": "^9.0.0",
-    "react-qrcode-logo": "^2.9.0"
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@antv/g6": "^4.8.23",
@@ -40,6 +37,7 @@
     "sass": "^1.69.5",
     "swr": "^2.2.0",
     "typescript": "^4.8.2",
-    "urlcat": "^2.0.4"
+    "urlcat": "^2.0.4",
+    "react-dom": "^18.2.0"
   }
 }
