chore: suspense with loading state temp

--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "nextjs-google-analytics": "^2.0.0",
     "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
+    "react-dom": "^18.2.0",
     "react-inlinesvg": "^4.0.4",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
-    "swr": "^2.2.0",
+    "swr": "^2.2.4",
     "typescript": "^4.8.2",
-    "urlcat": "^2.0.4",
-    "react-dom": "^18.2.0"
+    "urlcat": "^2.0.4"
   }
 }
