--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^14.0.4",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-markdown": "^9.0.0",
-    "wagmi": "1.4.12"
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
@@ -41,7 +42,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
     "swr": "^2.2.0",
-    "typescript": "^4.8.2",
+    "typescript": "^5.3.3",
     "urlcat": "^2.0.4"
   }
 }
