--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.3",
     "@rc-component/trigger": "^1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
     "boring-avatars": "^1.7.0",
@@ -18,9 +17,7 @@
     "geist": "^1.0.0",
     "next": "^14.1.1",
     "react-infinite-scroll-hook": "^4.1.1",
-    "react-markdown": "^9.0.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13"
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
@@ -37,12 +34,12 @@
     "react": "^18.2.0",
     "react-clipboard.js": "^2.0.16",
     "react-dom": "^18.2.0",
-    "react-inlinesvg": "^4.1.0",
+    "react-inlinesvg": "^4.0.4",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
-    "swr": "^2.2.0",
-    "typescript": "^5.3.3",
+    "swr": "^2.2.4",
+    "typescript": "^4.8.2",
     "urlcat": "^2.0.4"
   }
 }
