--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-infinite-scroll-hook": "^4.1.1",
     "react-markdown": "^9.0.0",
     "viem": "^1.21.4",
-    "wagmi": "^1.4.13"
+    "wagmi": "^1.4.13",
+    "yaqrcode": "^0.2.1"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
