--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rc-component/trigger": "^1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
     "d3": "^7.8.5",
+    "grapheme-splitter": "^1.0.4",
     "next": "^14.2.2",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-markdown": "^9.0.0",
