--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bonfida/spl-name-service": "^2.5.2",
     "@ensdomains/content-hash": "^3.0.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@rc-component/trigger": "^1.18.2",
