--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/jest": "^29.5.12",
     "ts-jest": "^29.1.2",
     "sass": "^1.69.5",
+    "ts-node": "^10.9.2",
     "swr": "^2.2.0",
     "typescript": "^5.3.3",
     "urlcat": "^2.0.4"
