--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@bonfida/spl-name-service": "^2.5.2",
     "@ensdomains/content-hash": "^3.0.0",
-    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@rainbow-me/rainbowkit": "^2.1.1",
     "@rc-component/trigger": "^1.18.2",
     "@reduxjs/toolkit": "^1.9.5",
     "d3": "^7.8.5",
@@ -21,13 +21,15 @@
     "next": "^14.2.2",
     "react-infinite-scroll-hook": "^4.1.1",
     "react-markdown": "^9.0.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13",
     "sharp": "^0.32.6",
+    "viem": "^2.13.1",
+    "wagmi": "^2.9.7",
     "yaqrcode": "^0.2.1"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^5.40.0",
     "@apollo/client": "^3.6.9",
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "bignumber.js": "^9.1.0",
@@ -35,6 +37,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "^14.2.2",
     "graphql": "^15.8.0",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "nextjs-google-analytics": "^2.0.0",
     "react": "^18.2.0",
@@ -42,12 +45,10 @@
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^4.1.0",
     "react-redux": "^8.0.5",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "ts-jest": "^29.1.2",
     "sass": "^1.69.5",
-    "ts-node": "^10.9.2",
     "swr": "^2.2.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "urlcat": "^2.0.4"
   }
