--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 NEXT_PUBLIC_BASE_URL = http://localhost:3000
 NEXT_PUBLIC_GRAPHQL_SERVER = https://relation-service-tiger.next.id/
-NEXT_PUBLIC_POAP_API_KEY = YOUR_POAP_API_KEY
-NEXT_PUBLIC_LENS_GRAPHQL_SERVER = https://api.lens.dev/
 NEXT_PUBLIC_ETHEREUM_RPC_URL = https://rpc.ankr.com/eth
+
+NEXT_PUBLIC_POAP_API_KEY = YOUR_POAP_API_KEY
+NEXT_PUBLIC_PROFILE_END_POINT = https://api.web3.bio
+NEXT_PUBLIC_PHI_API_KEY = YOUR_PHI_API_KEY
+NEXT_PUBLIC_TALLY_API_KEY = YOUR_TALLY_API_KEY
+NEXT_PUBLIC_WEBACY_API_KEY = YOUR_WEBACY_API_KEY
+NEXT_PUBLIC_GITCOIN_API_KEY = YOUR_GITCOIN_API_KEY
+NEXT_PUBLIC_UD_API_KEY = YOUR_UD_API_KEY
+NEXT_PUBLIC_FARCASTER_API_KEY = YOUR_FARCASTER_API_KEY
